// Author: Liang Liuwei (liangliuwei@qiyi.com)
//
// Proto definitions for rpc requests and responses for accessing the celebrity service.

import "knowledge/graph/pub/properties.proto";
import "knowledge/pub/common.proto";
import "knowledge/pub/knowledge.proto";
import "knowledge/pub/metadatas.proto";
import "knowledge/pub/qipu_options.proto";

package knowledge.pub;

// 获取相关明星的概要.

message GetCelebritySummaryRequest {
  option (knowledge.pub.service_message_options).method_name = "getCelebritySummary";
  option (knowledge.pub.service_message_options).type = REQUEST;
  
  optional knowledge.pub.User user = 1;
  repeated int64 entity_id = 2;
}

message GetCelebritySummaryResponse {
  option (knowledge.pub.service_message_options).method_name = "getCelebritySummary";
  option (knowledge.pub.service_message_options).type = RESPONSE;
  
  optional knowledge.pub.RpcStatus rpc_status = 1;
  optional string error_message = 2;
  repeated knowledge.graph.pub.CelebrityData celebrity_data =3;
}

message GetCelebrityGraphRequest {
  option (knowledge.pub.service_message_options).method_name = "getCelebrityGraph";
  option (knowledge.pub.service_message_options).type = REQUEST;
  
  optional knowledge.pub.User user = 1;
  optional int64 entity_id = 2;
  optional int32 from = 4 [default = 0];
  optional int32 size = 3 [default = 6];
}

message GetCelebrityGraphResponse {
  option (knowledge.pub.service_message_options).method_name = "getCelebrityGraph";
  option (knowledge.pub.service_message_options).type = RESPONSE;
  
  optional knowledge.pub.RpcStatus rpc_status = 1;
  optional string error_message = 2;
  
  repeated CelebrityGraph related_graph=3;
  
}

message CelebrityGraph{
    optional knowledge.graph.pub.CelebrityData related_celebrity =1;
    repeated CelebrityGraph related_graph=2;
}
