
package knowledge.pub;

import "google/protobuf/descriptor.proto";

message ServiceMessageOptions {
  optional string method_name = 1;

  enum Type {
    REQUEST = 1;     // request type
    RESPONSE = 2; //  response type
  }
  optional Type type = 2;
}

extend google.protobuf.MessageOptions {
  optional ServiceMessageOptions service_message_options = 50023;
}

message ServiceMessageFieldOptions {
  // 当通过http方式调用时,若url传递的参数不包括当前字段,则该字段使用该默认值填充.
  optional string default_value = 1;
}

extend google.protobuf.FieldOptions {
  optional ServiceMessageFieldOptions service_message_field_options = 50024;
}
